--- a/python_assignment_3.ipynb
+++ b/python_assignment_3.ipynb
@@ -13,53 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "d421b383",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a number to find the factorial: 5\n",
-      "120\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "id": "cbfc36b9",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def factorial(n):\n",
-    "    if n == 1:\n",
-    "        return n\n",
-    "    else:\n",
-    "        return (n * factorial(n-1))\n",
-    "num = int(input(\"Enter a number to find the factorial: \"))\n",
-    "result = factorial(num)\n",
-    "print(result)"
+    "import maths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "e8dd57cb",
+   "execution_count": 3,
+   "id": "15c0f1b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maths.factorial(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "123eef03",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number to find the fahrenheit: 37\n",
-      "37 98.6\n"
+      "37.00 Celsius is: 98.60 Fahrenheit\n"
      ]
     }
    ],
    "source": [
-    "def degree_conversion(degree):\n",
-    "    fahrenheit = (celsius * 9/5) + 32\n",
-    "    print(celsius,fahrenheit)\n",
-    "celsius = int(input(\"Enter a number to find the fahrenheit: \"))\n",
-    "degree_conversion(celsius)"
+    "maths.celsius_to_fahrenheit(37)"
    ]
   },
   {
